src/WebClientApp/src/components/SidePanel/SidePanel.module.scss
@use '../../variables' as v;

.container {
  --reader-header-offset: 84px;
  --side-panel-padding-x: 32px;
  position: fixed;
  top: var(--reader-header-offset);
  right: 0;
  height: calc(100% - var(--reader-header-offset));
  z-index: 3;
  overflow: hidden;
  background: var(--color-base-01);
  box-shadow: -4px 0px 10px 0px rgba(14, 18, 77, 0.07);
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

.header {
  position: sticky;
  top: 0;
  z-index: 1;
  background: var(--color-base-01);
  padding: 28px var(--side-panel-padding-x) 20px;
}

.title {
  padding: 0;
  color: var(--color-text-02);
  font-family: var(--font-family);
  font-size: 24px;
  font-weight: 500;
  line-height: 28px;
  margin: 0;
}

.close {
  position: absolute;
  top: 18px;
  right: 17px;
}

.content {
  flex: 1;
  overflow-y: auto;
  padding: 0 var(--side-panel-padding-x) 28px;
  box-sizing: border-box;
}

@media (max-width: v.$tablet-width) {
  .container {
    --reader-header-offset: 68px;
    box-shadow: -4px 4px 10px -4px rgba(14, 18, 77, 0.07);
  }
}

@media (max-width: v.$mobile-width) {
  .container {
    --side-panel-padding-x: 24px;
    height: unset;
    position: absolute;
    left: 0;
    bottom: 0;
    right: unset;
    top: unset;
    animation: slideUp 0.3s ease;
    border-radius: 20px 20px 0 0;
    box-shadow: 0px -4px 10px 0px rgba(2, 3, 24, 0.07);
    align-items: stretch;
  }
}

@keyframes slideUp {
  from {
    transform: translateY(100%);
  }
  to {
    transform: translateY(0);
  }
}

